infra/terraform/security_bastion.tf
# Groupe de sécurité pour le bastion
resource "aws_security_group" "bastion" {
  name        = "${var.project}-bastion-sg-${var.environment}"
  description = "Security group for bastion host"
  vpc_id      = module.vpc.vpc_id

  # Autoriser SSH depuis Internet
  ingress {
    from_port   = 22
    to_port     = 22
    protocol    = "tcp"
    cidr_blocks = ["0.0.0.0/0"]
  }

  # Autoriser le trafic sortant
  egress {
    from_port   = 0
    to_port     = 0
    protocol    = "-1"
    cidr_blocks = ["0.0.0.0/0"]
  }

  tags = merge(local.tags, {
    Name = "${var.project}-bastion-sg-${var.environment}"
  })

  lifecycle {
    create_before_destroy = true
  }
}
